--- a/src/Pages/Home/BusinessSummary/BusinessSummary.css
+++ b/src/Pages/Home/BusinessSummary/BusinessSummary.css
@@ -3,3 +3,9 @@
     width: 1px;
     background-color: #C4C4C4;
 }
+
+@media only screen and (max-width: 600px) {
+    .side-bar-b{
+       display: none;
+    }
+  }
